--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
-.asideHeader {
-	width: 150px;
+.header {
+	height: 50px;
 	padding: 10px;
 	border: 2px solid rgb(200, 200, 200);
 	border-radius: 12px;
