--- a/src/pages/Notes/components/Content/Content.module.css
+++ b/src/pages/Notes/components/Content/Content.module.css
@@ -1,11 +1,5 @@
 .content {
-	flex: 1;
+	width: 100%;
 	border: 2px solid rgb(200, 200, 200);
 	border-radius: 12px;
-}
-
-.blocks {
-	flex: 1;
-	padding: 10px;
-	overflow-x: auto;
 }
