--- a/src/pages/Notes/components/ContentHeader/ContentHeader.module.css
+++ b/src/pages/Notes/components/ContentHeader/ContentHeader.module.css
@@ -1,6 +1,12 @@
 .contentHeader {
 	height: 50px;
-	background-color: rgb(200, 198, 198);
+	/* background-color: rgb(200, 198, 198); */
 	border-radius: 7px 7px 0 0;
 	overflow: hidden;
+}
+
+.textInput {
+	max-width: 300px;
+	border: 2px solid rgb(20, 19, 19);
+	border-radius: 12px;
 }
