--- a/src/pages/Notes/components/NoteCard/NoteCard.module.css
+++ b/src/pages/Notes/components/NoteCard/NoteCard.module.css
@@ -13,3 +13,9 @@
 .dialogHeader {
 	height: fit-content;
 }
+
+.icon {
+	color: rgb(87, 87, 87);
+	background-color: rgb(0, 255, 0);
+	border-radius: 50%;
+}
