--- a/src/pages/Notes/components/Content/Content.module.css
+++ b/src/pages/Notes/components/Content/Content.module.css
@@ -1,5 +1,8 @@
 .content {
 	width: 100%;
+	max-height: 700px;
 	border: 2px solid rgb(200, 200, 200);
 	border-radius: 12px;
+	overflow-y: auto;
+	min-height: 0;
 }
